feat: paragraph and headers

--- a/web-moderno/index.html
+++ b/web-moderno/index.html
@@ -13,6 +13,8 @@
     <nav>
         <a href wn-nav=exercises/test.html>Test</a>
         <a href wn-nav=exercises/test2.html>Test 2</a>
+        <a href wn-nav=exercises/headers.html>Headers</a>
+        <a href wn-nav=exercises/paragraph.html>Paragraph</a>
 
     </nav>
     <section id="content"></section>
