--- a/web-moderno/index.html
+++ b/web-moderno/index.html
@@ -15,6 +15,7 @@
         <a href wn-nav=exercises/test2.html>Test 2</a>
         <a href wn-nav=exercises/headers.html>Headers</a>
         <a href wn-nav=exercises/paragraph.html>Paragraph</a>
+        <a href wn-nav=exercises/lists.html>Lists</a>
 
     </nav>
     <section id="content"></section>
