--- a/web-moderno/index.html
+++ b/web-moderno/index.html
@@ -16,6 +16,7 @@
         <a href wn-nav=exercises/headers.html>Headers</a>
         <a href wn-nav=exercises/paragraph.html>Paragraph</a>
         <a href wn-nav=exercises/lists.html>Lists</a>
+        <a href wn-nav=exercises/links.html>Links</a>
 
     </nav>
     <section id="content"></section>
