feat: Add Tables

--- a/web-moderno/index.html
+++ b/web-moderno/index.html
@@ -17,6 +17,7 @@
         <a href wn-nav=exercises/paragraph.html>Paragraph</a>
         <a href wn-nav=exercises/lists.html>Lists</a>
         <a href wn-nav=exercises/links.html>Links</a>
+        <a href wn-nav=exercises/tables.html>Tables</a>
 
     </nav>
     <section id="content"></section>
