--- a/web-moderno/index.html
+++ b/web-moderno/index.html
@@ -18,7 +18,7 @@
         <a href wn-nav=exercises/lists.html>Lists</a>
         <a href wn-nav=exercises/links.html>Links</a>
         <a href wn-nav=exercises/tables.html>Tables</a>
-        <a href wn-nav=exercises/forms.html>Forms</a>
+        <a href wn-nav=exercises/form/form.html>Forms</a>
 
     </nav>
     <section id="content"></section>
