feat: Add Images

--- a/web-moderno/index.html
+++ b/web-moderno/index.html
@@ -9,20 +9,23 @@
 <body>
     <header>
         HTML exercises
+        <br><br><br>
     </header>
     <nav>
-        <a href wn-nav=exercises/test.html>Test</a>
-        <a href wn-nav=exercises/test2.html>Test 2</a>
-        <a href wn-nav=exercises/headers.html>Headers</a>
-        <a href wn-nav=exercises/paragraph.html>Paragraph</a>
-        <a href wn-nav=exercises/lists.html>Lists</a>
-        <a href wn-nav=exercises/links.html>Links</a>
-        <a href wn-nav=exercises/tables.html>Tables</a>
-        <a href wn-nav=exercises/form/form.html>Forms</a>
+        <a href wn-nav=exercises/test.html>Test</a><br>
+        <a href wn-nav=exercises/test2.html>Test 2</a><br>
+        <a href wn-nav=exercises/headers.html>Headers</a><br>
+        <a href wn-nav=exercises/paragraph.html>Paragraph</a><br>
+        <a href wn-nav=exercises/lists.html>Lists</a><br>
+        <a href wn-nav=exercises/links.html>Links</a><br>
+        <a href wn-nav=exercises/tables.html>Tables</a><br>
+        <a href wn-nav=exercises/form/form.html>Forms</a><br>
+        <a href wn-nav=exercises/images/image.html>Images</a><br>
 
     </nav>
     <section id="content"></section>
     <footer>
+        <br><br><br>
         LEARNING HTML
     </footer>
     <script>
