--- a/web-moderno/index.html
+++ b/web-moderno/index.html
@@ -20,7 +20,7 @@
         <a href wn-nav=exercises/links.html>Links</a><br>
         <a href wn-nav=exercises/tables.html>Tables</a><br>
         <a href wn-nav=exercises/form/form.html>Forms</a><br>
-        <a href wn-nav=exercises/images/image.html>Images</a><br>
+        <a href wn-nav=exercises/image.html>Images</a><br>
 
     </nav>
     <section id="content"></section>
