--- a/web-moderno/exercises/image.html
+++ b/web-moderno/exercises/image.html
@@ -1,3 +1,5 @@
+<a href="/exercises/image.html" target="_blank">Images</a><br>
+
 <div wm-slider>
     <p>
         <img src="https://images.pexels.com/photos/5599747/pexels-photo-5599747.jpeg?auto=compress&cs=tinysrgb&h=650&w=940"
