--- a/web-moderno/index.html
+++ b/web-moderno/index.html
@@ -21,6 +21,8 @@
         <a href wn-nav=exercises/tables.html>Tables</a><br>
         <a href wn-nav=exercises/form/form.html>Forms</a><br>
         <a href wn-nav=exercises/image.html>Images</a><br>
+        <a href wn-nav=exercises/video.html>Videos</a><br>
+        <a href wn-nav=exercises/tags.html>Hide Tags</a><br>
 
     </nav>
     <section id="content"></section>
