cosmetic: rename folder

--- a/web-moderno/index.html
+++ b/web-moderno/index.html
@@ -12,17 +12,17 @@
         <br><br><br>
     </header>
     <nav>
-        <a href wn-nav=exercises/test.html>Test</a><br>
-        <a href wn-nav=exercises/test2.html>Test 2</a><br>
-        <a href wn-nav=exercises/headers.html>Headers</a><br>
-        <a href wn-nav=exercises/paragraph.html>Paragraph</a><br>
-        <a href wn-nav=exercises/lists.html>Lists</a><br>
-        <a href wn-nav=exercises/links.html>Links</a><br>
-        <a href wn-nav=exercises/tables.html>Tables</a><br>
-        <a href wn-nav=exercises/form/form.html>Forms</a><br>
-        <a href wn-nav=exercises/image.html>Images</a><br>
-        <a href wn-nav=exercises/video.html>Videos</a><br>
-        <a href wn-nav=exercises/tags.html>Hide Tags</a><br>
+        <a href wn-nav=html/test.html>Test</a><br>
+        <a href wn-nav=html/test2.html>Test 2</a><br>
+        <a href wn-nav=html/headers.html>Headers</a><br>
+        <a href wn-nav=html/paragraph.html>Paragraph</a><br>
+        <a href wn-nav=html/lists.html>Lists</a><br>
+        <a href wn-nav=html/links.html>Links</a><br>
+        <a href wn-nav=html/tables.html>Tables</a><br>
+        <a href wn-nav=html/form/form.html>Forms</a><br>
+        <a href wn-nav=html/image.html>Images</a><br>
+        <a href wn-nav=html/video.html>Videos</a><br>
+        <a href wn-nav=html/tags.html>Hide Tags</a><br>
 
     </nav>
     <section id="content"></section>
