--- a/web-moderno/css/seletores.html
+++ b/web-moderno/css/seletores.html
@@ -6,7 +6,25 @@
     <title>CSS Selectors</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        /* 
+        *
+        .tag 
+        #aprovados
+        #aninhado > div
+        #aninhado section
+        p + ul
+        p ~ ul
+        [feira]
+        [feira~=escritorio]
+        [feira*=sa]
+        span:nth-child(1)
+        section > :nth-child(even)
+        section > :nth-child(odd) label
+        */
+        section > :nth-child(odd) label{
+           color: #ff0;
+           background-color: #f77;
+       }
     </style>
 </head>
 
