feat: add Specificity

--- a/web-moderno/css/especificidade1.html
+++ b/web-moderno/css/especificidade1.html
@@ -6,6 +6,11 @@
     <title>Especificidade CSS</title>
     <style>
         /* https://developer.mozilla.org/pt-BR/docs/Web/CSS/Specificity */
+        /* 
+        * Especificidade:
+            1. Regra com !important
+            2. Regra com selector mais especifico
+            3. (Empate) Ultima regra processada
     </style>
 </head>
 
