--- a/web-moderno/css/alturaLargura.html
+++ b/web-moderno/css/alturaLargura.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <title>Altura e Largura</title>
     <style>
+        html {
+            height: 100%;
+
+        }
         body {
             font-size: 40px;
             background-color: coral;
+            height: 100%;
+            margin: 0; /* remove a small scroll */
         }
 
         div {
@@ -16,6 +22,12 @@
 
         span {
             background-color: dodgerblue;
+        }
+        span,
+        div {
+            height: 40%;
+            width: 40%;
+            display: block;
         }
     </style>
 </head>
