--- a/web-moderno/css/box.html
+++ b/web-moderno/css/box.html
@@ -5,7 +5,19 @@
     <meta charset="UTF-8">
     <title>Box Model</title>
     <style>
-        /* ... */
+        body {
+            font-size: 80px; margin: 0;
+        }
+        .c1 {background-color: orange;}
+        .c2 {background-color: skyblue;}
+        .c3 {background-color: tomato;}
+
+        div {
+            float: left;
+            padding: 50px;
+            margin: 0px 10px;
+            border: 5px solid black;
+        }
     </style>
 </head>
 
