--- a/web-moderno/css/cores.html
+++ b/web-moderno/css/cores.html
@@ -11,6 +11,17 @@
             https://coolors.co/
             http://paletton.com/
         */
+        body {
+            background-color: darkviolet;
+            background-color: #00ff00;
+            background-color: #00ff00aa;
+            background-color: #abc;
+            background-color: #abca;
+            background-color: rgba(255, 255, 255, 0.8);
+            background-color: hsl(0, 100%, 50%);
+
+        }
+
     </style>
 </head>
 
