--- a/web-moderno/css/unidades2.html
+++ b/web-moderno/css/unidades2.html
@@ -4,7 +4,23 @@
     <meta charset="UTF-8">
     <title>Unidades #02</title>
     <style>
-        /* ... */
+        .fora {
+            position: relative;
+            background-color: orange;
+            width: 400px;
+            height: 400px;
+            padding: 50px;
+        }
+
+        .dentro {
+            background-color: mediumseagreen;
+            width: 100%;
+            height: 100px;
+            position: static; /* conteudo */
+            position: relative; /* conteudo */
+            position: absolute; /* conteudo + padding */
+            position: fixed; /*viewport */
+        }
     </style>
 </head>
 <body>
