--- a/web-moderno/css/texto.html
+++ b/web-moderno/css/texto.html
@@ -6,7 +6,6 @@
     <title>Texto</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <style>
-        /* ... */
         * {
             margin: 0;
         }
@@ -16,6 +15,49 @@
             flex-direction: column;
             align-items: center;
         }
+        p {
+            /* valores padrões */
+            font-size: 1em;
+            font-size: 100%;
+            font-size: 16px;
+            font-size: 16pt;
+
+            /* unidades absolutas */
+            font-size: 2.2em;
+            font-size: 2.2rem;
+            font-size: 50vh;
+            font-size: 5vw;
+
+            font-family: monospace;
+            font-family:  Georgia, serif;
+            font-family: 'Indie Flower', cursive;
+
+            font-weight: 100;
+            font-style: italic;
+            text-transform: uppercase;
+            text-decoration: underline;
+            word-spacing: 20px;
+            letter-spacing: 10px;
+            line-height: 2.5em;
+            text-align: center;
+        }
+
+        .botao {
+            font-size: 28px;
+            text-decoration: none;
+            padding: 10px 30px;
+            border-radius: 25px;
+        }
+
+        .destaque {
+            color: white;
+            background: rebeccapurple;
+            box-shadow: 2px 2px 1px 1px black;
+        }
+
+        .destaque:active {
+            box-shadow: none;
+
     </style>
 </head>
 
