--- a/web-moderno/css/flexbox2.html
+++ b/web-moderno/css/flexbox2.html
@@ -4,9 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox #02</title>
-    <link rel="stylesheet" href="css/tag.css">
+    <!--- link rel="stylesheet" href="css/tag.css" --->
     <style>
-        /* ... */
+        div {
+            border: solid 5px dodgerblue;
+            font-size: 40px;
+        }
+
+        .flex-container div {
+            box-sizing: border-box;
+            width: 100px;
+            flex-grow: 1;
+        }
+
+        .flex-container {
+            display: flex;
+            height: 300px;
+            width: 600px;
+        }
+
+        .flex-container div:nth-child(3){
+            background-color: yellow;
+            order: 1;
+            order: 0;
+            order: -1;
+            align-self: center;
+            align-self: flex-end;
+            align-self: flex-start;
+            align-self: stretch;
+            flex-grow: 2; /* flex-shrink */
+        }
     </style>
 </head>
 
