--- a/web-moderno/css/flexbox3.html
+++ b/web-moderno/css/flexbox3.html
@@ -4,9 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox #03</title>
-    <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        div {
+            border: 5px solid black;
+            font-size: 40px;
+        }
+        .flex-container {
+            display: flex;
+            flex-direction: row;
+        }
+        .flex-container div {
+            box-sizing: border-box;
+            flex-basis: 100px;
+            width: 200px; /* vai perder */
+        }
+
+        .flex-container div:nth-child(4) {
+            /* grow shrink basis */
+            flex: 3 6 100px
+        }
     </style>
 </head>
 
@@ -17,7 +33,6 @@
         <div class="tag nolabel">3</div>
         <div class="tag nolabel">4</div>
     </div>
-    <script src="js/tag.js"></script>
 </body>
 
 </html>
