--- a/web-moderno/css/flexboxMenu.html
+++ b/web-moderno/css/flexboxMenu.html
@@ -17,6 +17,14 @@
             color: #fff;
             border-bottom: solid 5px #4faddb;
             height: 80px;
+            display: flex;
+            align-items: center;
+            justify-content: between;
+
+        }
+
+        .menu {
+            flex-grow: 10;
         }
         
         .logo img {
@@ -27,6 +35,11 @@
             list-style: none;
             margin: 0;
             padding: 0;
+            display: flex;
+        }
+
+        .menu li {
+            margin: 0 10px;
         }
         
         .cabecalho a {
