--- a/web-moderno/css/cssgrid2.html
+++ b/web-moderno/css/cssgrid2.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <title>CSS Grid #02</title>
     <style>
+        /*
+        Recentemente, no entanto, o uso delas se tornou obsoleto, o que pode gerar o aviso Property is obsolete. Avoid using it (propriedade obsoleta. Evite usá-la).
+        Para solucionar isso, basta, em vez de utilizar grid-column-gap, usar column-gap. E, em vez de grid-row-gap, usar row-gap. E, em vez de grid-gap, usar gap. Em outras palavras, basta remover o prefixo grid- que funcionarão como esperado.
+        */
         html,
         body {
             margin: 20px;
             height: calc(100% - 40px);
             background-color: lightgray;
         }
-        
+
         div {
             display: flex;
             align-items: center;
@@ -19,6 +23,22 @@
             font-size: 30px;
             border: solid 5px dodgerblue;
             background: #fff;
+        }
+
+        body {
+            display: grid;
+            grid-template-columns: [inicio] 1fr [meio-1] 1fr [meio-2] 1fr [fim];
+            column-gap: 20px;
+            row-gap: 20px;
+            gap: 10px;
+        }
+        .d1 {
+            grid-column-start: meio-2;
+            grid-column-end: fim;
+            grid-column: meio-1 /fim;
+            grid-row: 1 / span 2    ;
+            /* row-start column-start row-end column-end */
+            grid-area: 1 / meio-1 / span 3 / fim;
         }
     </style>
 </head>
