--- a/web-moderno/vue/exercicios/binding.html
+++ b/web-moderno/vue/exercicios/binding.html
@@ -7,9 +7,31 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+    <div id="app">
+        <p>{{ link }}</p>
+        <p><a href="{{ link }}">Canal?</a></p>
+        <p><a v-bind:href="link">Canal</a></p>
+        <p><a :href="link">Canal 2</a></p>
+        <p>
+            <input type="text" v-model="nome"><br>
+            <input type="text" value="nome"><br>
+            <input type="text" :value="nome"><br>
+            <span> {{ nome }} </span>
+        </p>
+    </div>
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data: {
+                nome: "Leo",
+                link: "https://youtube.com/cod3rcursos"
+            },
+            watch: {
+                nome(novoValor) {
+                    console.log(novoValor);
+                }
+            }
+        })
     </script>
 </body>
 </html>
