--- a/web-moderno/vue/exercicios/ifFor.html
+++ b/web-moderno/vue/exercicios/ifFor.html
@@ -7,9 +7,32 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+    <div id="app">
+        <p v-for="(aluno, i) in alunos">
+            {{i+1}}) {{aluno.nome}} - {{aluno.nota}}
+            <span v-if="aluno.nota >= 9">Quadro de Honra</span>
+            <span v-else-if="aluno.nota >= 5">Aprovado</span>
+            <span v-else-if="aluno.nota >= 3">Recuperação</span>
+            <span v-else>Reprovado</span>
+        </p>
+        <ul style="list-style: none;">
+            <li v-for="n in 50">
+                <span v-show="n % 10 == 0">{{n}}</span>
+            </li>
+        </ul>
+    </div>
     <script>
-        // ...
+        new Vue({
+            el: '#app',
+            data: {
+                alunos: [
+                    { nome: 'João', nota: 5.3, cor: 'green' },
+                    { nome: 'Maria', nota: 9.2, cor: 'red' },
+                    { nome: 'Pedro', nota: 6.8, cor: 'green' },
+                    { nome: 'Ana', nota: 2.7, cor: 'red' }
+                ]
+            }
+        })
     </script>
 </body>
 </html>
