--- a/web-moderno/vue/exercicios/index.html
+++ b/web-moderno/vue/exercicios/index.html
@@ -13,6 +13,7 @@
         <div class="menu-principal">
             <h1>VueJS</h1>
             <nav>
+                <a>-</a>
                 <a href="basico.html">Conceitos Básicos</a>
                 <a href="binding.html">Binding</a>
                 <a href="eventos.html">Eventos</a>
@@ -22,6 +23,7 @@
                 <a href="estilo.html">Aplicando Estilo</a>
                 <a href="template.html">Template</a>
                 <a href="componente.html">Componente</a>
+                <a href="componente2.html">Componente2</a>
                 <a href="diretiva.html">Diretiva Personalizada</a>
             </nav>
         </div>
